<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kalkulator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_side_background"
            android:orientation="vertical"
            android:padding="16dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_jumlahTebar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/jumlah_tebar_benih"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/et_jumlahTebar" />

                    <EditText
                        android:id="@+id/et_jumlahTebar"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/bg_main_input"
                        android:includeFontPadding="true"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        app:layout_constraintStart_toEndOf="@+id/tv_jumlahTebar"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sizeBenih"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/size_benih"
                        app:layout_constraintStart_toStartOf="@+id/tv_jumlahTebar"
                        app:layout_constraintTop_toTopOf="@+id/et_sizeBenih" />

                    <EditText
                        android:id="@+id/et_sizeBenih"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        android:ems="10"
                        android:includeFontPadding="true"
                        android:inputType="number|numberDecimal"
                        android:paddingLeft="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/et_jumlahTebar"
                        app:layout_constraintStart_toStartOf="@+id/et_jumlahTebar"
                        app:layout_constraintTop_toBottomOf="@+id/et_jumlahTebar" />

                    <TextView
                        android:id="@+id/tv_sizePanen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/size_panen"
                        app:layout_constraintStart_toStartOf="@+id/tv_sizeBenih"
                        app:layout_constraintTop_toTopOf="@+id/et_sizePanen" />

                    <EditText
                        android:id="@+id/et_sizePanen"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        android:ems="10"
                        android:includeFontPadding="true"
                        android:inputType="number|numberDecimal"
                        android:paddingLeft="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/et_sizeBenih"
                        app:layout_constraintStart_toStartOf="@+id/et_sizeBenih"
                        app:layout_constraintTop_toBottomOf="@+id/et_sizeBenih" />

                    <TextView
                        android:id="@+id/tv_lamaPelihara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/lama_pemeliharaan"
                        app:layout_constraintStart_toStartOf="@+id/tv_sizePanen"
                        app:layout_constraintTop_toTopOf="@+id/et_lamaPelihara" />

                    <EditText
                        android:id="@+id/et_lamaPelihara"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        android:ems="10"
                        android:includeFontPadding="true"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/et_sizePanen"
                        app:layout_constraintStart_toStartOf="@+id/et_sizePanen"
                        app:layout_constraintTop_toBottomOf="@+id/et_sizePanen" />

                    <TextView
                        android:id="@+id/tv_tanggalTebar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/tanggal_tebar"
                        app:layout_constraintStart_toStartOf="@+id/tv_lamaPelihara"
                        app:layout_constraintTop_toTopOf="@+id/et_tanggalTebar" />

                    <com.example.testingdifeeding.utils.diDatePicker
                        android:id="@+id/et_tanggalTebar"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        app:layout_constraintEnd_toEndOf="@+id/et_lamaPelihara"
                        app:layout_constraintStart_toStartOf="@+id/et_lamaPelihara"
                        app:layout_constraintTop_toBottomOf="@+id/et_lamaPelihara" />

                    <TextView
                        android:id="@+id/tv_kelangsunganHidup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/kelangsungan_hidup"
                        app:layout_constraintStart_toStartOf="@+id/tv_tanggalTebar"
                        app:layout_constraintTop_toTopOf="@+id/et_kelangsunganHidup" />

                    <EditText
                        android:id="@+id/et_kelangsunganHidup"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        android:ems="10"
                        android:includeFontPadding="true"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/et_tanggalTebar"
                        app:layout_constraintStart_toStartOf="@+id/et_tanggalTebar"
                        app:layout_constraintTop_toBottomOf="@+id/et_tanggalTebar" />

                    <TextView
                        android:id="@+id/tv_FRAwal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/feeding_rate_awal"
                        app:layout_constraintStart_toStartOf="@+id/tv_kelangsunganHidup"
                        app:layout_constraintTop_toTopOf="@+id/et_FRAwal" />

                    <EditText
                        android:id="@+id/et_FRAwal"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        android:ems="10"
                        android:includeFontPadding="true"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/et_kelangsunganHidup"
                        app:layout_constraintStart_toStartOf="@+id/et_kelangsunganHidup"
                        app:layout_constraintTop_toBottomOf="@+id/et_kelangsunganHidup" />

                    <TextView
                        android:id="@+id/tv_FRAkhir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/feeding_rate_akhir"
                        app:layout_constraintStart_toStartOf="@+id/tv_FRAwal"
                        app:layout_constraintTop_toTopOf="@+id/et_FRAkhir" />

                    <EditText
                        android:id="@+id/et_FRAkhir"
                        android:layout_width="152dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_input"
                        android:ems="10"
                        android:includeFontPadding="true"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/et_FRAwal"
                        app:layout_constraintStart_toStartOf="@+id/et_FRAwal"
                        app:layout_constraintTop_toBottomOf="@+id/et_FRAwal" />

<!--                    <TextView-->
<!--                        android:id="@+id/tv_selisihFR"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="16dp"-->
<!--                        android:text="@string/selisih_feeding_rate"-->
<!--                        app:layout_constraintStart_toStartOf="@+id/tv_FRAkhir"-->
<!--                        app:layout_constraintTop_toTopOf="@+id/et_selisihFR" />-->

<!--                    <EditText-->
<!--                        android:id="@+id/et_selisihFR"-->
<!--                        android:layout_width="171dp"-->
<!--                        android:layout_height="48dp"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:background="@drawable/bg_main_input"-->
<!--                        android:ems="10"-->
<!--                        android:includeFontPadding="true"-->
<!--                        android:inputType="number"-->
<!--                        android:paddingLeft="5dp"-->
<!--                        app:layout_constraintEnd_toEndOf="@+id/et_FRAkhir"-->
<!--                        app:layout_constraintStart_toStartOf="@+id/et_FRAkhir"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/et_FRAkhir" />-->

                    <Button
                        android:id="@+id/hitung"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_main_btn"
                        android:onClick="hitungKalkulator"
                        android:text="@string/hitung"
                        android:textColor="#FFF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_FRAkhir" />

                    <TextView
                        android:id="@+id/tv_satuan_jml_tbr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/ekor"
                        app:layout_constraintStart_toEndOf="@+id/et_jumlahTebar"
                        app:layout_constraintTop_toTopOf="@+id/tv_jumlahTebar" />

                    <TextView
                        android:id="@+id/tv_satuan_sz_bnh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/ekor_kg"
                        app:layout_constraintStart_toEndOf="@+id/et_sizeBenih"
                        app:layout_constraintTop_toTopOf="@+id/tv_sizeBenih" />

                    <TextView
                        android:id="@+id/tv_satuan_sz_pnn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/ekor_kg"
                        app:layout_constraintStart_toEndOf="@+id/et_sizePanen"
                        app:layout_constraintTop_toTopOf="@+id/tv_sizePanen" />

                    <TextView
                        android:id="@+id/tv_satuan_lm_plhr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/hari"
                        app:layout_constraintStart_toEndOf="@+id/et_lamaPelihara"
                        app:layout_constraintTop_toTopOf="@+id/tv_lamaPelihara" />

                    <TextView
                        android:id="@+id/tv_satuan_kl_hdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/persen"
                        app:layout_constraintStart_toEndOf="@+id/et_kelangsunganHidup"
                        app:layout_constraintTop_toTopOf="@+id/tv_kelangsunganHidup" />

                    <TextView
                        android:id="@+id/tv_satuan_frawal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/persen"
                        app:layout_constraintStart_toEndOf="@+id/et_FRAwal"
                        app:layout_constraintTop_toTopOf="@+id/tv_FRAwal" />

                    <TextView
                        android:id="@+id/tv_satuan_frakhir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/persen"
                        app:layout_constraintStart_toEndOf="@+id/et_FRAkhir"
                        app:layout_constraintTop_toTopOf="@+id/tv_FRAkhir" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="?android:attr/windowBackground"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/menu"/>
    </LinearLayout>
</FrameLayout>